# AUTOGEN_STRATEGY_REGIONAL

./: CMakeLists.txt  README.md  main copy.cpp  main.cpp  mainwindow.cpp  mainwindow.h
